Har lavet en klasse KUN til den autogeneret data som Wristband API'en spytter ud og bruger den i den nyligt tilføjede ConsumeWristbandData.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,7 @@
         </activity>
 
         <activity android:name=".REST.DataActivity"/>
-        <activity android:name=".RestToRest.WristBandData"/>
+        <activity android:name=".RestToRest.ConsumeWristbandData"/>
 
 
     </application>
